--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-	<a href="/new_item">Luo uusi lookki</a>
+	<a href="/new_look">Luo uusi lookki</a>
   </p>
 
   <h2>Julkaistut lookit</h2>
