Add find look feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,14 @@
   {% endif %}
 
   <p>
-	  <a href="/login">Kirjuadu sisään</a>
 	  <a href="/register">Luo tunnus</a>
+	  <a href="/login">Kirjuadu sisään</a>
 	  <a href="/logout">Kirjaudu ulos</a>
   </p>
 
   <p>
 	<a href="/new_look">Luo uusi lookki</a>
+	<a href="/find_look">Hae lookkia</a>
   </p>
 
   <h2>Julkaistut lookit</h2>
