--- a/templates/edit_look.html
+++ b/templates/edit_look.html
@@ -10,11 +10,13 @@
   <form action="/update_look" method="post">
     <p>
       Otsikko: <br />
-      <input type="text" name="title" value="{{ look.title }}"/>
+      <input type="text" name="title" value="{{ look.title }}"
+      maxlength="50" required />
     </p>
     <p>
     Kuvaus: <br />
-    <textarea name="description" rows="8" cols="60">{{ look.description }}</textarea>
+    <textarea name="description" rows="8" cols="60" maxlength="1000" required >
+	{{ look.description }}</textarea>
     </p>
 
 <!-- PLACEHOLDER FOR MAKEUP PRODUCTS, different inputs for eye, lip,
