--- a/templates/new_look.html
+++ b/templates/new_look.html
@@ -10,11 +10,11 @@
   <form action="/create_look" method="post">
     <p>
       Otsikko: <br />
-      <input type="text" name="title"/>
+      <input type="text" name="title" maxlength="50" required />
     </p>
     <p>
     Kuvaus: <br /> 
-    <textarea name="description" rows="8" cols="60"></textarea>
+    <textarea name="description" rows="8" cols="60" maxlength="1000"></textarea>
     </p>
 
 <!-- PLACEHOLDER FOR MAKEUP PRODUCTS, different inputs for eye, lip,
