--- a/templates/show_look.html
+++ b/templates/show_look.html
@@ -21,7 +21,8 @@
 		Käytetyt meikit - {{ look.makeup }}
 	</p>
 	<p>
-		Meikkiartisti - {{ look.username }}
+		Meikkiartisti - <a href="/user/{{ look.user_id }}">
+		{{ look.username }}</a>
 	</p>
 	<p>
 		<a href="/">Etusivulle</a>
