--- a/templates/edit_look.html
+++ b/templates/edit_look.html
@@ -13,10 +13,28 @@
       <input type="text" name="title" value="{{ look.title }}"
       maxlength="50" required />
     </p>
+
+    {% for class in all_classes %}
+    <p>
+		{{ class }}: <br />
+		<select name="classes">
+			<option value="">valitse</option>
+		{% for option in all_classes[class] %}
+			{% if classes[class] == option %}
+			<option value="{{ class }}:{{ option }}" selected>{{ option }}</option>
+			{% else %}
+			<option value="{{ class }}:{{ option }}">{{ option }}</option>
+
+			{% endif %}
+		{% endfor %}
+		</select>
+    </p>
+    {% endfor %}
+
     <p>
     Kuvaus: <br />
     <textarea name="description" rows="8" cols="60" maxlength="1000" required >
-	{{ look.description }}</textarea>
+{{ look.description }}</textarea>
     </p>
 
 <!-- PLACEHOLDER FOR MAKEUP PRODUCTS, different inputs for eye, lip,
