--- a/templates/new_look.html
+++ b/templates/new_look.html
@@ -18,7 +18,7 @@
 		<select name="classes">
 			<option value="">valitse</option>
 		{% for option in classes[class] %}
-			<option value={{ class }}:{{ option }}>{{ option }}</option>
+			<option value="{{ class }}:{{ option }}">{{ option }}</option>
 		{% endfor %}
 		</select>
     </p>
